# ERA5_Evaluation

./: .gitignore  CLAUDE.md  README.md  conftest.py  download_eval_oneday.py  download_minimal.py  download_oneday.py  pyproject.toml  setup.py  visual_oneday.py
.claude/: settings.local.json
.github/workflows/: lint.yml
docs/source/: data-guide.ipynb
scripts/: compute_averages.py  compute_climatology.py  compute_derived_variables.py  compute_ensemble_mean.py  compute_probabilistic_climatological_forecasts.py  compute_probabilistic_climatological_forecasts_test.py  compute_quantiles.py  compute_statistical_moments.py  compute_zonal_energy_spectrum.py  evaluate.py  expand_climatology.py  index_on_valid_time.py  regrid.py  regrid_test.py  slice_dataset.py
weatherbench2/: derived_variables.py  evaluation.py  flag_utils.py  metrics.py  regridding.py  regridding_test.py  schema.py  test_utils.py  utils.py
